feat: add /activation/get-activation-target endpoint
